2009-06-25  Olivier Stasse  <olivier.stasse@aist.go.jp>

	Changes in Foot::SoleSize() returns.
	* interfaces/jrlFoot.h: 
	Modified soleSize to not return anything.

2009-06-25  Olivier Stasse  <olivier.stasse@aist.go.jp>

	Fix the deprecated attribute for footHeight().
	* interfaces/jrlHumanoidDynamicRobot.h: 
	Another fix for __attribute__ ((deprecated))
	It seems to be working on g++-4.3.3 .

2009-06-25  Olivier Stasse  <olivier.stasse@aist.go.jp>

	Fixed a bug forbidding compilation for implementation.
	* interfaces/jrlHumanoidDynamicRobot.h: 
	A space is needed between 0 and __attribute__ .

2009-06-24  Florent Lamiraux  <florent@laas.fr>

	Merge branch humanoidspecificities.
	* ChangeLog: .
	* documentation/pictures/foot.fig: New.
	* documentation/pictures/foot.png: New.
	* interfaces/CMakeLists.txt: .
	* interfaces/jrlDynamicRobot.h: .
	* interfaces/jrlFoot.h: New.
	* interfaces/jrlHumanoidDynamicRobot.h: .
